# multifractal-asset-model

./: .gitignore  Cargo.toml  README.md
src/: fractal.rs  main.rs  plot.rs  utilities.rs
