[package]
name = "multifractal-asset-model"
version = "0.1.0"
authors = ["Matthew Scheffel <mscheffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
conv = "0.3.3"
czt = "0.3.6"
indicatif = "0.15.0"
itertools-num = "0.1.3"
ndarray = { version = "0.13"}
ndarray-csv = "0.4"
ndarray-glm = { version = "0.0.7", features = ["intel-mkl"]}
num = "0.3"
probability = "0.17.0"
rand = "0.7.3"
rand_distr = "0.3.0"
roots = "0.0.6"
stochastic = "0.5.2"

[patch.crates-io]
czt = { path = 'C:\\Users\\Matt\\Documents\\Development\\Rust\\czt' }